@@ -1,5 +1,5 @@
 /**
- * Copyright 2004-2018 the original author or authors.
+ * Copyright 2004-2020 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -73,7 +73,7 @@ public abstract class BaseProbe implements Probe {
       } else if (list instanceof float[]) {
         value = new Float(((float[]) list)[i]);
       } else if (list instanceof int[]) {
-        value = new Integer(((int[]) list)[i]);
+        value = Integer.valueOf(((int[]) list)[i]);
       } else if (list instanceof long[]) {
         value = new Long(((long[]) list)[i]);
       } else if (list instanceof short[]) {
