@@ -1,5 +1,5 @@
 /**
- * Copyright 2004-2017 the original author or authors.
+ * Copyright 2004-2020 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -76,7 +76,7 @@ public class CacheKey implements Cloneable, Serializable {
    * @return the cache key
    */
   public CacheKey update(int x) {
-    update(new Integer(x));
+    update(Integer.valueOf(x));
     return this;
   }
 
